--- a/Modulo-06/04/views/index.ejs
+++ b/Modulo-06/04/views/index.ejs
@@ -1,22 +1,14 @@
-<html>
-<head>
-    <title>The Node Movie Database</title>
-    <link rel="stylesheet" type="text/css" href="http://nodejs-workshop-arg.github.com/stylesheets/stylesheet.css">
-</head>
-<body>
-    <div class="container">
-        <small style="float: right;">
-            logged as <%= user.name %>
-        </small>
-        <h1>My movies</h1>
-        <ul>
-            <% movies.forEach(function(movie){ %>
-                <li>
-                    <a href="/movies/<%= movie.id %>"><%= movie.name %></a>
-                </li>
-            <% }) %>
-        </ul>
+<% include includes/head %>
 
-    </div>
-</body>
-</html>
+<div class="section">
+    <h2>top movies</h2>
+    <ul>
+        <% movies.forEach(function(movie){ %>
+            <li>
+                <a href="/movies/<%= movie.id %>"><%= movie.name %></a>
+            </li>
+        <% }) %>
+    </ul>
+</div>
+
+<% include includes/foot %>
