--- a/Modulo-06/04/views/movie.ejs
+++ b/Modulo-06/04/views/movie.ejs
@@ -1,17 +1,10 @@
-<html>
-<head>
-    <title>The Node Movie Database</title>
-    <link rel="stylesheet" type="text/css" href="http://nodejs-workshop-arg.github.com/stylesheets/stylesheet.css">
-</head>
-<body>
-    <div class="container">
-        <small style="float: right;">
-            logged as <%= user.name %>
-        </small>
-        <h1><%= name %></h1>
-        <p>
-            <%= synopsis %>
-        </p>
-    </div>
-</body>
-</html>
+<% include includes/head %>
+
+<div class="section">
+    <h2><%= name %></h2>
+    <p>
+        <%= synopsis %>
+    </p>
+</div>
+
+<% include includes/foot %>
