--- a/Modulo-09/views/includes/head.ejs
+++ b/Modulo-09/views/includes/head.ejs
@@ -10,6 +10,9 @@
     <div class="container">
         <header>
             <h1>the node.js movies database</h1>
+            <div style="float: right; padding: 0 10px 10px 0px;">
+                <a href="/">home</a> - <a href="/new">create movie</a>
+            </div>
         </header>
 
         <div class="main">
